<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">process</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- MainActivity -->
    <string name="warn">If you did not understand this request ,it\'s 
        generally a good idea to deny it. Tap for more information.</string>
    
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="remember">Remember me</string>

</resources>