<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0a1724"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        
        android:background="@drawable/ic_launcher" />
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="12sp"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="18sp" />
    
     <TextView 
        android:layout_width="fill_parent"
        android:layout_height="12sp"/>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="5sp"
        android:background="#000000"/>
    
    <TextView 
        android:id="@+id/appInfo"
        android:textSize="18sp" 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="12sp"/>
    
     <TextView 
        android:layout_width="fill_parent"
        android:layout_height="12sp"/>
    
    <TextView
        android:textSize="18sp"
        android:onClick="viewClick"
        android:text="@string/warn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
     <TextView 
        android:layout_width="fill_parent"
        android:layout_height="12sp"/>
     
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="false"
         android:id="@+id/checkBox"
         android:text="@string/remember" />
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="12sp"/>
    
     <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*" >

        <TableRow>

            <Button
                android:id="@+id/deny"
                android:onClick="viewClick"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/deny" />

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/allow"
                android:onClick="viewClick"
                android:text="@string/allow" />
        </TableRow>
    </TableLayout>

</LinearLayout>